--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </div>
   </nav>
   
+
+  <div id="display-project"></div>
   
 
 
@@ -52,7 +54,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/js/foundation.min.js"
 integrity="sha512-9cXmvmK1gIDw3Tol6Xg/1SUls/CvBMgedu1aDjT519sQzy7jk+LoezyQqlzClW2LgXww4xEyuqtofg7PtWteLQ=="
 crossorigin="anonymous"></script>
-
+<!-- Javascript File -->
+<script src="assets/script.js"></script>
 
 
   </body>
