added resume pdf link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="menu simple vertical medium-horizontal">
           <li id="projectButton"><a href="#">Projects</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Resume</a></li>
+          <li id="resumeButton"><a target="_blank" href="./assets/Resume.pdf">Resume</a></li>
         </ul>
       </div>
     </div>
@@ -36,14 +36,6 @@
   
 
   <div id="display-project"></div>
-  
-
-
-
-
-
-
-
 
 
 
