--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
 		integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation-float.min.css"
         integrity="sha256-4ldVyEvC86/kae2IBWw+eJrTiwNEbUUTmN0zkP4luL4=" crossorigin="anonymous">
+        
         <link rel="stylesheet" href="assets/style.css" />
     <title>Foundation Starter Template</title>
 
@@ -27,18 +29,18 @@
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
           <li id="projectButton"><a href="#">Projects</a></li>
-          <li><a href="#">About</a></li>
+          <li id="aboutButton"><a href="#">About</a></li>
           <li id="resumeButton"><a target="_blank" href="./assets/Resume.pdf">Resume</a></li>
         </ul>
       </div>
     </div>
   </nav>
   
-
+<!-- Project Page -->
   <div id="display-project"></div>
 
-
-
+<!-- About Me Page -->
+  <div id="display-about"></div>
 
    <!-- JQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
