added home page info

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
     </div>
   </nav>
  
-
-
+  <!-- Starter Page -->
+    <div id="display-first-page">
+        <h1>Hi, I'm Jessny.</h1>
+        <p>I am a web developer interested in the convergence between biological systems and emerging
+         technologies. Feel free to look at my most recent projects. </p>
+    </div>
 
 
 <!-- Project Page -->
