added home button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="topbar-responsive" class="topbar-responsive-links">
       <div class="top-bar-right">
         <ul class="menu simple vertical medium-horizontal">
+          <li id="homeButton"><a href="#">Home</a></li>
           <li id="projectButton"><a href="#">Projects</a></li>
           <li id="aboutButton"><a href="#">About</a></li>
           <li id="resumeButton"><a target="_blank" href="./assets/Resume.pdf">Resume</a></li>
@@ -38,8 +39,8 @@
  
   <!-- Starter Page -->
     <div id="display-first-page">
-        <h1>Hi, I'm Jessny.</h1>
-        <p>I am a web developer interested in the convergence between biological systems and emerging
+        <h1 id="jessny">Hi, I'm Jessny.</h1>
+        <p id="starter-text">I am a web developer interested in the convergence between biological systems and emerging
          technologies. Feel free to look at my most recent projects. </p>
     </div>
 
